--- a/Project.Rmd
+++ b/Project.Rmd
@@ -1,19 +1,28 @@
 
 Instructions
 ---------------
-The goal of the assignment is to explore the NOAA Storm Database and explore the effects of severe weather events on both population and economy.The database covers the time period between 1950 and November 2011.
 
-The following analysis investigates which types of severe weather events are most harmful on:
+Storms and other severe weather events can cause both public health and economic problems for communities and municipalities. Many severe events can result in fatalities, injuries, and property damage, and preventing such outcomes to the extent possible is a key concern.
 
-1.  Health (injuries and fatalities)
-2.  Property and crops (economic consequences)
+This project involves exploring the U.S. National Oceanic and Atmospheric Administration's (NOAA) storm database. This database tracks characteristics of major storms and weather events in the United States, including when and where they occur, as well as estimates of any fatalities, injuries, and property damage.
 
-Information on the Data: [Documentation](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf)
+## Assignment
 
-Data Processing
+The basic goal of this assignment is to explore the NOAA Storm Database and answer some basic questions about severe weather events. You must use the database to answer the questions below and show the code for your entire analysis. Your analysis can consist of tables, figures, or other summaries. You may use any R package you want to support your analysis.
+
+## Questions
+
+Your data analysis must address the following questions:
+
+- Across the United States, which types of events (as indicated in the \color{red}{\verb|EVTYPE|}EVTYPE variable) are most harmful with respect to population health?
+- Across the United States, which types of events have the greatest economic consequences?
+
+Consider writing your report as if it were to be read by a government or municipal manager who might be responsible for preparing for severe weather events and will need to prioritize resources for different types of events. However, there is no need to make any specific recommendations in your report.
+
+
+
+Data Analysis
 ------------------
-
-Download the raw data file and extract the data into a dataframe.Then convert to a data.table
 
 ``` r
 library("data.table")
@@ -26,8 +35,6 @@ stormDF <- read.csv("/Users/mgalarny/Desktop/repdata%2Fdata%2FStormData.csv.bz2"
 # Converting data.frame to data.table
 stormDT <- as.data.table(stormDF)
 ```
-
-### 2.2: Examining Column Names
 
 ``` r
 colnames(stormDT)
@@ -42,35 +49,18 @@ colnames(stormDT)
     ## [31] "ZONENAMES"  "LATITUDE"   "LONGITUDE"  "LATITUDE_E" "LONGITUDE_"
     ## [36] "REMARKS"    "REFNUM"
 
-### 2.3: Data Subsetting
-
-Subset the dataset on the parameters of interest. Basically, we remove the columns we don't need for clarity.
 
 ``` r
 # Finding columns to remove
-cols2Remove <- colnames(stormDT[, !c("EVTYPE"
-  , "FATALITIES"
-  , "INJURIES"
-  , "PROPDMG"
-  , "PROPDMGEXP"
-  , "CROPDMG"
-  , "CROPDMGEXP")])
+cols2Remove <- colnames(stormDT[, !c("EVTYPE", "FATALITIES", "INJURIES", "PROPDMG", "PROPDMGEXP", "CROPDMG", "CROPDMGEXP")])
 
 # Removing columns
 stormDT[, c(cols2Remove) := NULL]
 
 # Only use data where fatalities or injuries occurred.  
 stormDT <- stormDT[(EVTYPE != "?" & 
-             (INJURIES > 0 | FATALITIES > 0 | PROPDMG > 0 | CROPDMG > 0)), c("EVTYPE"
-                                                                            , "FATALITIES"
-                                                                            , "INJURIES"
-                                                                            , "PROPDMG"
-                                                                            , "PROPDMGEXP"
-                                                                            , "CROPDMG"
-                                                                            , "CROPDMGEXP") ]
+             (INJURIES > 0 | FATALITIES > 0 | PROPDMG > 0 | CROPDMG > 0)), c("EVTYPE", "FATALITIES", "INJURIES", "PROPDMG", "PROPDMGEXP", "CROPDMG", "CROPDMGEXP") ]
 ```
-
-### 2.4: Converting Exponent Columns into Actual Exponents instead of (-,+, H, K, etc)
 
 Making the PROPDMGEXP and CROPDMGEXP columns cleaner so they can be used to calculate property and crop cost.
 
@@ -80,31 +70,10 @@ cols <- c("PROPDMGEXP", "CROPDMGEXP")
 stormDT[,  (cols) := c(lapply(.SD, toupper)), .SDcols = cols]
 
 # Map property damage alphanumeric exponents to numeric values.
-propDmgKey <-  c("\"\"" = 10^0,
-                 "-" = 10^0, 
-                 "+" = 10^0,
-                 "0" = 10^0,
-                 "1" = 10^1,
-                 "2" = 10^2,
-                 "3" = 10^3,
-                 "4" = 10^4,
-                 "5" = 10^5,
-                 "6" = 10^6,
-                 "7" = 10^7,
-                 "8" = 10^8,
-                 "9" = 10^9,
-                 "H" = 10^2,
-                 "K" = 10^3,
-                 "M" = 10^6,
-                 "B" = 10^9)
+propDmgKey <-  c("\"\"" = 10^0,"-" = 10^0, "+" = 10^0,"0" = 10^0,"1" = 10^1,"2" = 10^2,"3" = 10^3,"4" = 10^4,"5" = 10^5,"6" = 10^6,"7" = 10^7,"8" = 10^8,"9" = 10^9,"H" = 10^2,"K" = 10^3,"M" = 10^6,"B" = 10^9)
 
 # Map crop damage alphanumeric exponents to numeric values
-cropDmgKey <-  c("\"\"" = 10^0,
-                "?" = 10^0, 
-                "0" = 10^0,
-                "K" = 10^3,
-                "M" = 10^6,
-                "B" = 10^9)
+cropDmgKey <-  c("\"\"" = 10^0,"?" = 10^0, "0" = 10^0,"K" = 10^3,"M" = 10^6,"B" = 10^9)
 
 stormDT[, PROPDMGEXP := propDmgKey[as.character(stormDT[,PROPDMGEXP])]]
 stormDT[is.na(PROPDMGEXP), PROPDMGEXP := 10^0 ]
@@ -113,21 +82,14 @@ stormDT[, CROPDMGEXP := cropDmgKey[as.character(stormDT[,CROPDMGEXP])] ]
 stormDT[is.na(CROPDMGEXP), CROPDMGEXP := 10^0 ]
 ```
 
-### 2.5: Making Economic Cost Columns
-
 ``` r
 stormDT <- stormDT[, .(EVTYPE, FATALITIES, INJURIES, PROPDMG, PROPDMGEXP, propCost = PROPDMG * PROPDMGEXP, CROPDMG, CROPDMGEXP, cropCost = CROPDMG * CROPDMGEXP)]
 ```
 
-### 2.6: Calcuating Total Property and Crop Cost
-
 ``` r
 totalCostDT <- stormDT[, .(propCost = sum(propCost), cropCost = sum(cropCost), Total_Cost = sum(propCost) + sum(cropCost)), by = .(EVTYPE)]
-
 totalCostDT <- totalCostDT[order(-Total_Cost), ]
-
 totalCostDT <- totalCostDT[1:10, ]
-
 head(totalCostDT, 5)
 ```
 
@@ -138,15 +100,11 @@ head(totalCostDT, 5)
     ## 4:       STORM SURGE  43323536000       5000  43323541000
     ## 5:              HAIL  15735267513 3025954473  18761221986
 
-### 2.7: Calcuating Total Fatalities and Injuries
 
 ``` r
 totalInjuriesDT <- stormDT[, .(FATALITIES = sum(FATALITIES), INJURIES = sum(INJURIES), totals = sum(FATALITIES) + sum(INJURIES)), by = .(EVTYPE)]
-
 totalInjuriesDT <- totalInjuriesDT[order(-FATALITIES), ]
-
 totalInjuriesDT <- totalInjuriesDT[1:10, ]
-
 head(totalInjuriesDT, 5)
 ```
 
@@ -157,12 +115,11 @@ head(totalInjuriesDT, 5)
     ## 4:           HEAT        937     2100   3037
     ## 5:      LIGHTNING        816     5230   6046
 
-3: Results
+Answers
 ----------
 
-### 3.1: Events that are Most Harmful to Population Health
+### Across the United States, which types of events are most harmful with respect to population health?
 
-Melting data.table so that it is easier to put in bar graph format
 
 ``` r
 bad_stuff <- melt(totalInjuriesDT, id.vars="EVTYPE", variable.name = "bad_thing")
@@ -179,30 +136,21 @@ head(bad_stuff, 5)
 ``` r
 # Create chart
 healthChart <- ggplot(bad_stuff, aes(x=reorder(EVTYPE, -value), y=value))
-
 # Plot data as bar chart
 healthChart = healthChart + geom_bar(stat="identity", aes(fill=bad_thing), position="dodge")
-
 # Format y-axis scale and set y-axis label
 healthChart = healthChart + ylab("Frequency Count") 
-
 # Set x-axis label
 healthChart = healthChart + xlab("Event Type") 
-
 # Rotate x-axis tick labels 
 healthChart = healthChart + theme(axis.text.x = element_text(angle=45, hjust=1))
-
 # Set chart title and center it
 healthChart = healthChart + ggtitle("Top 10 US Killers") + theme(plot.title = element_text(hjust = 0.5))
-
 healthChart
 ```
+![](Project2/1.png)
 
-![](ReproducibleResearchProject2_files/figure-markdown_github/healthChart-1.png)
-
-### 3.2: Events that have the Greatest Economic Consequences
-
-Melting data.table so that it is easier to put in bar graph format
+### Across the United States, which types of events have the greatest economic consequences?
 
 ``` r
 econ_consequences <- melt(totalCostDT, id.vars="EVTYPE", variable.name = "Damage_Type")
@@ -219,23 +167,16 @@ head(econ_consequences, 5)
 ``` r
 # Create chart
 econChart <- ggplot(econ_consequences, aes(x=reorder(EVTYPE, -value), y=value))
-
 # Plot data as bar chart
 econChart = econChart + geom_bar(stat="identity", aes(fill=Damage_Type), position="dodge")
-
 # Format y-axis scale and set y-axis label
 econChart = econChart + ylab("Cost (dollars)") 
-
 # Set x-axis label
 econChart = econChart + xlab("Event Type") 
-
 # Rotate x-axis tick labels 
 econChart = econChart + theme(axis.text.x = element_text(angle=45, hjust=1))
-
 # Set chart title and center it
 econChart = econChart + ggtitle("Top 10 US Storm Events causing Economic Consequences") + theme(plot.title = element_text(hjust = 0.5))
-
 econChart
 ```
-
-![](ReproducibleResearchProject2_files/figure-markdown_github/econChart-1.png)
+![](Project2/2.png)
